fix player remove

--- a/app/views/games/_dashboard2.html.erb
+++ b/app/views/games/_dashboard2.html.erb
@@ -10,6 +10,7 @@
       <% unless defined?(readonly) && readonly %>
         <ul class="actions">
           <li><%= edit_player_link(row[:player])  %></li>
+          <li><%= button_to '🗑️', game_player_path(game_id: row[:player].game_id, id: row[:player].id), method: :delete, 'data-tooltip': t('players.destroy.title'), class: 'form-as-button' %></li>
         </ul>
       <% end %>
     </div>
