--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,24 +1,28 @@
 <h1><%= @title %></h1>
-<table>
-  <tr>
-    <th><%= Game.human_attribute_name("name") %></th>
-    <th><%= Game.human_attribute_name("players") %> / <%= Game.human_attribute_name("actions") %></th>
-    <th><%= Game.human_attribute_name("updated_at") %></th>
-  </tr>
-  <% @games.each do |game| %>
+<% if @games.size > 0 %>
+  <table>
     <tr>
-      <td><%= link_to game.name, game %></td>
-      <td>
-        <ul>
-          <li><%= game.players.size %> <%= Game.human_attribute_name("players") %></li>
-          <li><%= game.get_actions_list.size %> <%= Game.human_attribute_name("actions") %></li>
-          <li><%= pluralize game.cards.map(&:done?).size, t('.cards_done_count.one'), t('.cards_done_count.other') %> </li>
-        </ul>
-      </td>
-      <td><%= game.updated_at %></td>
+      <th><%= Game.human_attribute_name("name") %></th>
+      <th><%= Game.human_attribute_name("players") %> / <%= Game.human_attribute_name("actions") %></th>
+      <th><%= Game.human_attribute_name("updated_at") %></th>
     </tr>
-  <% end %>
-</table>
+    <% @games.each do |game| %>
+      <tr>
+        <td><%= link_to game.name, game %></td>
+        <td>
+          <ul>
+            <li><%= game.players.size %> <%= Game.human_attribute_name("players") %></li>
+            <li><%= game.get_actions_list.size %> <%= Game.human_attribute_name("actions") %></li>
+            <li><%= pluralize game.cards.map(&:done?).size, t('.cards_done_count.one'), t('.cards_done_count.other') %> </li>
+          </ul>
+        </td>
+        <td><%= game.updated_at %></td>
+      </tr>
+    <% end %>
+  </table>
+<% else %>
+  <p>⚠️ <%= t ('.no_games') %></p>
+<% end %>
 <%= link_to t('games.new.title'), new_game_path, role: :button %>
 <% if @current_games.size > 0 %>
   <h2><%= t('.current_games') %></h2>
