--- a/app/assets/stylesheets/application/player-cards.css
+++ b/app/assets/stylesheets/application/player-cards.css
@@ -20,7 +20,7 @@
   border-bottom: 1px solid var(--card-border-color);
   border-right: 1px solid var(--card-border-color);
 
-  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--card-box-shadow);
 
   display: flex;
 }
