--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @title %></h1>
 <p><%= t('pages.help.intro') %></p>
 <h2><%= t('pages.help.h2_example') %></h2>
-<%= render 'pages/game_example' %>
+<%= render 'pages/game_examples' %>
 <%= render 'shared/faq_for_player' %>
