--- a/app/assets/stylesheets/application/card.css
+++ b/app/assets/stylesheets/application/card.css
@@ -3,4 +3,6 @@
   background-color: var(--card-background-color);
   padding: var(--spacing);
   border-radius: var(--border-radius);
+  border: 1px solid var(--card-border-color);
+  box-shadow: var(--card-box-shadow);
 }
