--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,19 +12,26 @@
       <%= link_to t('pages.help.title'), help_path, role: "button", class: "secondary outline" %>
     </div>
   </div>
-  <div class="balloons">
-    <%= render 'shared/balloon', content: t('pages.home.balloons_example')[0], left: true %>
-    <%= render 'shared/balloon', content: t('pages.home.balloons_example')[1], right: true %>
-    <%= render 'shared/balloon', content: t('pages.home.balloons_example')[2], left: true %>
-    <%= render 'shared/balloon', content: t('pages.home.balloons_example')[3], right: true %>
+  <div class="card">
+    <%= render 'game_example' %>
   </div>
+  <% if false %>
+    <div class="balloons iso-3d webpage-screenshot">
+      <%= render 'shared/balloon', content: t('pages.home.balloons_example')[0], left: true %>
+      <%= render 'shared/balloon', content: t('pages.home.balloons_example')[1], right: true %>
+      <%= render 'shared/balloon', content: t('pages.home.balloons_example')[2], left: true %>
+      <%= render 'shared/balloon', content: t('pages.home.balloons_example')[3], right: true %>
+    </div>
+  <% end %>
 </section>
 <hr />
-<section class="home">
-  <h2><%= t('pages.home.h2_what_is_the_killer') %></h2>
-  <%= render 'pages/game_example' %>
-</section>
-<hr />
+<% if false %>
+  <section class="home">
+    <h2><%= t('pages.home.h2_what_is_the_killer') %></h2>
+    <%= render 'pages/game_examples' %>
+  </section>
+  <hr />
+<% end %>
 <section>
   <%= render 'pages/how_does_it_work' %>
 </section>
