fix translations issues

--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -1,2 +1,2 @@
-<h1><%= game_link @game %> / <%= @title %></h1>
+<h1><%= game_link @game %> / <%= t('.title') %></h1>
 <%= render "form", card: @card %>
