--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="<%= @locale %>">
   <head>
-    <title><%= @title %></title>
+    <title><%= t('.title') %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -17,7 +17,6 @@
       <% flash.each do |level, msg| %>
         <p class="flash flash--<%= level %>"><%= msg %></p>
       <% end %>
-
       <%= yield %>
     </main>
     <%= render 'layouts/footer' %>
