--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -1,5 +1,5 @@
 <%= link_to game_path(@game.id), role: :button  do %>
   <%= t 'games.show.title' %> <mark>admin</mark>
 <% end if is_admin? @game %>
-<h1><%= @title %></h1>
+<h1><%= t('.title') %></h1>
 <%= render 'games/dashboard', game: @game %>
