--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @title %></h1>
+<h1><%= t('.title') %></h1>
 <p><%= t('pages.help.intro') %></p>
 <h2><%= t('pages.help.h2_example') %></h2>
 <%= render 'pages/game_examples' %>
