--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,11 @@
-<h1 style="display: none"><%= @title %></h1>
 <% if false %>
   <p class="text-center"><%= render "games/dashboards_list" %></p>
 <% end %>
 <section class="grid home home-first">
   <div class="mb-2">
-    <h1><%= @title %><br />
-      <small><%= t('pages.home.title_small') %></small></h1>
-    <p><%= t('pages.home.you_are_on_the_right_place') %></p>
+    <h1><%= t('.title') %><br />
+      <small><%= t('.title_small') %></small></h1>
+    <p><%= t('.you_are_on_the_right_place') %></p>
     <div class="flex">
       <%= link_to t('games.new.title'), new_game_path, role: "button" %>
       <%= link_to t('pages.help.title'), help_path, role: "button", class: "secondary outline" %>
@@ -17,17 +16,17 @@
   </div>
   <% if false %>
     <div class="balloons iso-3d webpage-screenshot">
-      <%= render 'shared/balloon', content: t('pages.home.balloons_example')[0], left: true %>
-      <%= render 'shared/balloon', content: t('pages.home.balloons_example')[1], right: true %>
-      <%= render 'shared/balloon', content: t('pages.home.balloons_example')[2], left: true %>
-      <%= render 'shared/balloon', content: t('pages.home.balloons_example')[3], right: true %>
+      <%= render 'shared/balloon', content: t('.balloons_example')[0], left: true %>
+      <%= render 'shared/balloon', content: t('.balloons_example')[1], right: true %>
+      <%= render 'shared/balloon', content: t('.balloons_example')[2], left: true %>
+      <%= render 'shared/balloon', content: t('.balloons_example')[3], right: true %>
     </div>
   <% end %>
 </section>
 <hr />
 <% if false %>
   <section class="home">
-    <h2><%= t('pages.home.h2_what_is_the_killer') %></h2>
+    <h2><%= t('.h2_what_is_the_killer') %></h2>
     <%= render 'pages/game_examples' %>
   </section>
   <hr />
@@ -37,5 +36,5 @@
 </section>
 <hr />
 <section>
-  <h2><%= t('pages.home.h2_pricing') %></h2>
+  <h2><%= t('.h2_pricing') %></h2>
 </section>
