--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,3 +1,3 @@
-<h1><%= game_link @player.game %> / <%= @title %></h1>
+<h1><%= game_link @player.game %> / <%= t('.title') %></h1>
 <%= render "form", player: @player %>
 <%= button_to t('players.destroy.title'), game_player_path(game_id: @player.game_id, id: @player.id), method: :delete %>
