--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= game_link @game %> / <%= @title %></h1>
+<h1><%= game_link @game %> / <%= t('.title') %></h1>
 <div class="my-grid">
   <% @players.each do |player| %>
     <div class="col-xs-12 col-md-6 col-lg-4">
