--- a/app/views/cards/_done_button.html.erb
+++ b/app/views/cards/_done_button.html.erb
@@ -2,5 +2,7 @@
   <%= form.hidden_field :done_at, value: card.done? ? "0" : "1" %>
   <%= form.submit (card.done? ? t('cards.show.mark_as_todo') : t('cards.show.mark_as_done')),
     class: (card.done? ? 'secondary outline' : ''), disabled: !card.game.started? %>
-  <small><%= t 'cards._done_button.disabled' %></small>
+  <% if !card.game.started? %>
+    <small><%= t 'cards._done_button.disabled' %></small>
+  <% end %>
 <% end %>
