fix order generation

--- a/app/assets/stylesheets/application/player-cards.css
+++ b/app/assets/stylesheets/application/player-cards.css
@@ -25,6 +25,10 @@
   display: flex;
 }
 
+.player-cards__player__secret {
+  display: inline;
+}
+
 .player-cards__action p,
 .player-cards__player p {
   margin: 0;
