--- a/app/views/games/_dashboard2_player.html.erb
+++ b/app/views/games/_dashboard2_player.html.erb
@@ -1,5 +1,5 @@
 <div class="player-cards__player">
-  <p><strong><%= row[:player].name %></strong>
+  <p><strong><%= row[:player].name %></strong><%#= row[:player].position %>
     <% unless defined?(readonly) && readonly %>
       <code class="player-cards__player__secret" data-tooltip="<%= t('games._dashboard2.secret_tooltip') %>"><%= row[:player].secret %></code>
     <% end %>
@@ -11,6 +11,20 @@
   </p>
   <% unless defined?(readonly) && readonly %>
     <ul class="actions">
+      <% if row[:player].position != 1 %>
+        <li><%= button_to '↑',
+          game_player_path(game_id: row[:player].game_id, id: row[:player].id, player: {position: row[:player].position - 1}),
+          method: :put,
+          'data-tooltip': t('players._dashboard2.move_up'),
+          class: 'form-as-button' %>
+        </li>
+      <% end %>
+      <li><%= button_to '↓',
+          game_player_path(game_id: row[:player].game_id, id: row[:player].id, player: {position: row[:player].position + 1}),
+          method: :put,
+          'data-tooltip': t('players._dashboard2.move_up'),
+          class: 'form-as-button' %>
+      </li>
       <li><%= edit_player_link(row[:player])  %></li>
       <li><%= button_to '🗑️', game_player_path(game_id: row[:player].game_id, id: row[:player].id), method: :delete, 'data-tooltip': t('players.destroy.title'), class: 'form-as-button' %></li>
     </ul>
