--- a/app/views/games/_dashboard2_player.html.erb
+++ b/app/views/games/_dashboard2_player.html.erb
@@ -1,17 +1,24 @@
+<%
+readonly = defined?(readonly) && readonly
+hide_move_up = defined?(hide_move_up) && hide_move_up
+hide_move_down = defined?(hide_move_down) && hide_move_down
+%>
 <div class="player-cards__player">
-  <p><strong><%= row[:player].name %></strong><%#= row[:player].position %>
-    <% unless defined?(readonly) && readonly %>
-      <code class="player-cards__player__secret" data-tooltip="<%= t('games._dashboard2.secret_tooltip') %>"><%= row[:player].secret %></code>
-    <% end %>
+  <p><strong><%= row[:player].name %></strong>
     <%= rank_to_icon row[:rank] %>
     <% if row[:player].description %>
       <br />
       <%= row[:player].description %>
     <% end %>
+    <% unless true || readonly %>
+      <br/>
+      <%= Player.human_attribute_name("secret") %>
+      <code class="player-cards__player__secret" data-tooltip="<%= t('games._dashboard2.secret_tooltip') %>"><%= row[:player].secret %></code>
+    <% end %>
   </p>
-  <% unless defined?(readonly) && readonly %>
+  <% unless readonly %>
     <ul class="actions">
-      <% if row[:player].position != 1 %>
+      <% if row[:player].position != 1 && !hide_move_up %>
         <li><%= button_to '↑',
           game_player_path(game_id: row[:player].game_id, id: row[:player].id, player: {position: row[:player].position - 1}),
           method: :put,
@@ -19,12 +26,14 @@
           class: 'form-as-button' %>
         </li>
       <% end %>
-      <li><%= button_to '↓',
+      <% unless hide_move_down %>
+        <li><%= button_to '↓',
           game_player_path(game_id: row[:player].game_id, id: row[:player].id, player: {position: row[:player].position + 1}),
           method: :put,
-          'data-tooltip': t('games._dashboard2.move_up'),
+          'data-tooltip': t('games._dashboard2.move_down'),
           class: 'form-as-button' %>
-      </li>
+        </li>
+      <% end %>
       <li><%= edit_player_link(row[:player])  %></li>
       <li><%= button_to '🗑️', game_player_path(game_id: row[:player].game_id, id: row[:player].id), method: :delete, 'data-tooltip': t('players.destroy.title'), class: 'form-as-button' %></li>
     </ul>
