--- a/app/views/cards_mailer/start.html.erb
+++ b/app/views/cards_mailer/start.html.erb
@@ -1,8 +1,11 @@
-<p>
-  La killer party <%= link_to @game.name, game_dashboard_url(@game.token, locale: @locale) %> a commencée 😱.
-</p>
-<h2><%= t 'card_print.your_mission' %></h2>
-<p>👉 <%= t('card_print.need_to_make', target: @card.target.pretty ).html_safe %><br/>
-  <strong><%= @card.action %></strong></p>
-<p><%= t('cards.show.after_done_instructions', target: @card.target.pretty).html_safe %></p>
-<p><%= link_to t('cards.show.title'), public_card_url(@card.token, locale: @locale) %></p>
+<p><%= raw t('.game_started', link: link_to(@game.name, game_dashboard_url(@game.token, locale: @locale)) ) %></p>
+<p><%= t '.information.title' %>:</p>
+<ul>
+  <li><strong><%= t('.information.action') %>:</strong> <%= @card.action %></li>
+  <li><strong><%= t('.information.target') %>:</strong> <%= @card.target.pretty %></li>
+  <li><strong><%= t('.information.dashboard') %>:</strong> <%= link_to(t('cards.show.title'), game_dashboard_url(@game.token, locale: @locale)) %></li>
+  <li><strong><%= t('.information.secret') %>:</strong> <code><%= @card.player.secret %></code><br/>
+    <small><%= t('.information.secret_help') %></small>
+  </li>
+</ul>
+<p><%= t('.footer') %></p>
