--- a/app/views/cards/_done_button.html.erb
+++ b/app/views/cards/_done_button.html.erb
@@ -1,5 +1,15 @@
 <%= form_with(model: card, url: game_card_path(game_id: card.game.id, id: card.token), remote: true, class: "card-form") do |form| %>
   <%= form.hidden_field :done_at, value: card.done? ? "0" : "1" %>
+  <% if !card.done? %>
+    <div>
+      <%= form.label :secret %>
+      <%= form.text_field :secret,
+      required: true,
+      value: (is_admin?(card.game) ? card.target.secret : '')
+    %>
+      <small><%= t 'cards._done_button.secret_help' %></small>
+    </div>
+  <% end %>
   <%= form.submit (card.done? ? t('cards.show.mark_as_todo') : t('cards.show.mark_as_done')),
     class: (card.done? ? 'secondary outline' : ''), disabled: !card.game.started? %>
   <% if !card.game.started? %>
