--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -24,7 +24,7 @@
   <p>⚠️ <%= t ('.no_games') %></p>
 <% end %>
 <%= link_to t('games.new.title'), new_game_path, role: :button %>
-<% if @current_games.size > 0 %>
+<% if false && @current_games.size > 0 %>
   <h2><%= t('.current_games') %></h2>
   <ul>
     <% @current_games.each do |game| %>
