--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: card, url: game_card_path(game_id: card.game_id, id: card.token), remote: true) do |form| %>
+<%= form_with(model: card, url: game_card_path(game_id: card.game_id, id: card.id), remote: true) do |form| %>
   <div class="grid">
     <div>
       <%= form.label :player %>
