--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
     <%= javascript_importmap_tags %>
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
     <%= stylesheet_link_tag "application" %>
+    <link rel="icon" href="<%= image_path 'favicon.svg' %>">
+    <link rel="mask-icon" href="<%= image_path 'favicon.svg' %>" color="#000000">
   </head>
   <body>
     <div class="container-fluid">
