--- a/app/views/cards/_done_button.html.erb
+++ b/app/views/cards/_done_button.html.erb
@@ -6,14 +6,14 @@
       <div>
         <%= form.label :secret %>
         <%= text_field_tag :secret, nil,
-      required: true,
-      value: (is_admin?(card.game) ? card.target.secret : '')
-    %>
+              required: true,
+              value: (is_admin?(card.game) ? card.target.secret : '') %>
         <small><%= t 'cards._done_button.secret_help' %></small>
       </div>
     <% end %>
     <%= form.submit (card.done? ? t('cards.show.mark_as_todo') : t('cards.show.mark_as_done')),
-    class: (card.done? ? 'secondary outline' : ''), disabled: !card.game.started? %>
+          class: (card.done? ? 'secondary outline' : ''),
+          disabled: !card.game.started? %>
     <% if !card.game.started? %>
       <small><%= t 'cards._done_button.disabled' %></small>
     <% end %>
